--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="title">About</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/Nirmal.jpeg" alt="" class="about-img" style="border-radius: 10px;"><style>
+                    <img src="Nirmal.jpeg" alt="" class="about-img" style="border-radius: 10px;"><style>
                   .about-img:hover{
                     box-shadow: 10px 10px 15px 5px rgba(1,1,1,100);
                     transform: rotate(5deg);
