--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="text">He is a Passionate <span class="typing-2"></span></div>
                     <p>Hi !!! This is <b>Nirmal Rajaa</b> <br><br> 
                         I'm currently pursuing my Pre-Final Year in Bachelor of Engineering under Computer and Communication Engineering. I'm Self taught programmer and Passionate in programming and web development. Currently working on an Augmented Reality project. </p>
-                    <a download href="/Nirmal Rajaa Resume.pdf" class="about-img">Download Resume</a>
+                    <a download href="Nirmal Rajaa Resume.pdf" class="about-img">Download Resume</a>
                 </div>
             </div>
         </div>
